--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .sound {
+  display: table;
   background-color: yellow;
   color: black;
   border: 5px solid black;
@@ -8,6 +9,14 @@
   max-height: 10vh;
   flex-grow: 1;
   flex-shrink: 1;
+  transition: all ease 8s;
+  box-shadow: inset 0 0 0 0 #31302B;
+}
+
+.sound-name {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .background-img {
@@ -24,4 +33,14 @@
   justify-content: space-around;
   width: 1080;
   height: 1920;
+}
+
+/*.sound:hover {
+  background-color: red;
+  transition: background-color 2000ms radial;
+}*/
+
+.sound:hover {
+  box-shadow: inset 100px 0 0 0 #e0e0e0;
+  color: #fff;
 }
